--- a/home.html
+++ b/home.html
@@ -34,51 +34,85 @@
       </nav>
       <!-- First Container -->
       <div id="who" class="container-fluid bg-about text-center">
-         <h3 class="margin">Who Am I?</h3>
-         <img src="img/profile.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Gautham_Velappan_Profile" width="300" height="300">
-         <h3 class="margin">About</h3>
-         <h4 align="left">
+         <h1 class="margin">Who Am I?</h1>
+         <img src="img/profile.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Gautham_Velappan_Profile" width="256" height="256">
+         <h4 style="color: #323232;">
             Hi. I’m <b><i>Gautham Velappan Arumugavadivelmurugan</b></i>. I have what appears to be a very difficult name to pronounce. Most often I have pronunciation challenge with people and end up winning.
-            <br><br>
             Anyways, having such a unique name is good for something - I can be easily found on the internet without much difficulty and when i comes to getting user names I can never have any trouble getting one.
+            <br>
          </h4>
-         <h3 class="margin">Actually about me</h3>
-         <h4 align="left"> 
+         <h3>Actually about me</h3>
+         <h4 style="color: #323232;"> 
             I'm front end Mobile applications and Web developer who is passionate about innovating and creating productive applications. As a developer I spend my time writing and testing code. 
-            <br><br>
             When not developing I create various prototype, designs and ideas. I also spend time tutoring basics of iOS development, swift and objective-c.
          </h4>
       </div>
       <!-- Second Container -->
       <div id="what" class="container-fluid bg-who text-center">
-         <h3 class="margin">What I do?</h3>
-         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-         <a href="#" class="btn btn-default btn-lg">
-         <span class="glyphicon glyphicon-search"></span> Search
+         <h1 class="margin">What I do?</h1>
+         <h4>
+            I am a US-based iOS, watchOS, and tvOS Developer and consultant with a wealth of experience with both big brands and small businesses. I have published a few my own apps, including Namma Chennai which was the best transit app under navigation section in India region. My recent client work has included the Citi Mobile NA, Logitech Harmony, JapanPost Health, and Logitech Broadcaster. I was also part of the team at IBM which build 100+ iOS enterprise apps for iOS devices. As well as iPhone, iPad, Apple Watch, and Apple TV development (all coded in Swift), I also work as a Ruby on rails developer specializing in API development for iOS apps 
+         </h4>
+         <br>
+         <h4>
+            I am also a casual photographer, I enjoy capturing landscape, cityscape and other random scenes. I don’t own any professional camera and I fancy my iPhone to do the magic. I started up an Instagram few years ago and I have decent number of  followers. Here are some of the images I captured.  
+         </h4>
+         <br>
+         <div class="row">
+            <div class="col-sm-4">
+               <h5>Beautiful fall afternoon at Central Park, NYC</h5>
+               <img src="img/instagram/centralpark.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+            </div>
+            <div class="col-sm-4">
+               <h5>Birdseye view of Chennai, Tamil Nadu</h5>
+               <img src="img/instagram/chennai.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+            </div>
+            <div class="col-sm-4">
+               <h5>Stunning sunset at San Diego, CA</h5>
+               <img src="img/instagram/sandiego.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+            </div>
+         </div>
+         <div class="row">
+            <div class="col-sm-4">
+               <h5>Gloomy hours in Manhattan, NY</h5>
+               <img src="img/instagram/nyc.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+            </div>
+            <div class="col-sm-4">
+               <h5>Sunny day at Piedmont Park, Atlanta</h5>
+               <img src="img/instagram/piedmontpark.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+            </div>
+            <div class="col-sm-4">
+               <h5>Seashore at Baltimore, MD</h5>
+               <img src="img/instagram/maryland.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+            </div>
+         </div>
          </a>
       </div>
       <!-- Third Container (Grid) -->
       <div id="where" class="container-fluid bg-what text-center">
-         <h3 class="margin">Where To Find Me?</h3>
-         <br>
-         <div class="row">
-            <div class="col-sm-4">
-               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-               <img src="birds1.jpg" class="img-responsive margin" style="width:100%" alt="Image">
-            </div>
-            <div class="col-sm-4">
-               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-               <img src="birds2.jpg" class="img-responsive margin" style="width:100%" alt="Image">
-            </div>
-            <div class="col-sm-4">
-               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-               <img src="birds3.jpg" class="img-responsive margin" style="width:100%" alt="Image">
-            </div>
+         <h1 class="margin">Where To Find Me?</h1>
+         <div>
+            <a target="_blank" href="https://twitter.com/vagautham">
+            <img title="Twitter" alt="Twitter" src="img/twitter.png" width="48" height="48" />
+            </a>
+            <a target="_blank" href="https://www.facebook.com/ivagautham">
+            <img title="Facebook" alt="Facebook" src="img/facebook.png" width="48" height="48" />
+            </a>
+            <a target="_blank" href="https://www.linkedin.com/in/gauthamvelappan">
+            <img title="LinkedIn" alt="LinkedIn" src="img/linkedin.png" width="48" height="48" />
+            </a>
+            <a target="_blank" href="https://www.instagram.com/vagautham/">
+            <img title="Instagram" alt="Instagram" src="img/instagram.png" width="48" height="48" />
+            </a>
+            <a target="_blank" href="https://open.spotify.com/user/12146906520">
+            <img title="Spotify" alt="Spotify" src="img/spotify.png" width="48" height="48" />
+            </a>
          </div>
+         <br>
       </div>
       <!-- Footer -->
       <footer class="container-fluid bg-where text-center">
-         <p>Bootstrap Theme Made By <a href="http://www.w3schools.com">www.w3schools.com</a></p>
+         <p>Copyright 2016 Gautham Velappan. Content thieves will be ... meh, I don't care :)</p>
       </footer>
    </body>
 </html>
