--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
    <head>
       <title>Gautham Velappan</title>
       <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
       <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
       <link href="http://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
@@ -91,24 +91,75 @@
       <!-- Third Container (Grid) -->
       <div id="where" class="container-fluid bg-what text-center">
          <h1 class="margin">Where To Find Me?</h1>
+         <h4 style="color: #323232;">
+            Like most of the people around the world I am on all the popular social networking community.
+            <br>
+            Find me, Friend me and Follow me
+         </h4>
+         <br>
          <div>
             <a target="_blank" href="https://twitter.com/vagautham">
-            <img title="Twitter" alt="Twitter" src="img/twitter.png" width="48" height="48" />
+            <img title="Twitter" alt="Twitter" src="img/twitter.png" width="64" height="64" />
             </a>
             <a target="_blank" href="https://www.facebook.com/ivagautham">
-            <img title="Facebook" alt="Facebook" src="img/facebook.png" width="48" height="48" />
+            <img title="Facebook" alt="Facebook" src="img/facebook.png" width="64" height="64" />
             </a>
             <a target="_blank" href="https://www.linkedin.com/in/gauthamvelappan">
-            <img title="LinkedIn" alt="LinkedIn" src="img/linkedin.png" width="48" height="48" />
+            <img title="LinkedIn" alt="LinkedIn" src="img/linkedin.png" width="64" height="64" />
             </a>
             <a target="_blank" href="https://www.instagram.com/vagautham/">
-            <img title="Instagram" alt="Instagram" src="img/instagram.png" width="48" height="48" />
-            </a>
-            <a target="_blank" href="https://open.spotify.com/user/12146906520">
-            <img title="Spotify" alt="Spotify" src="img/spotify.png" width="48" height="48" />
+            <img title="Instagram" alt="Instagram" src="img/instagram.png" width="64" height="64" />
             </a>
          </div>
          <br>
+         <h4 style="color: #323232;">
+            If you want to know my kind of music and test my skills in gaming.
+            <br>
+            Add me on theses. Lets kill some zombies and bad guys together
+         </h4>
+         <br>
+         <div>
+            <a target="_blank" href="https://open.spotify.com/user/12146906520">
+            <img title="Spotify" alt="Spotify" src="img/spotify.png" width="64" height="64" />
+            </a>
+            <a target="_blank" href="https://my.playstation.com/ivagautham">
+            <img title="Playstation" alt="psn" src="img/psn.png" width="64" height="64" />
+            </a>
+         </div>
+         <br>
+         <h4 style="color: #323232;">
+            Say Hello.
+            <br><br>
+            <a href="mailto:ivagautham@gmail.com?Subject=Hello%20again" style="text-decoration:none">
+            <img title="Email" alt="Email" src="img/email.png" width="64" height="64"/>
+            <br>
+            ivagautham@gmail.com
+            </a>
+            <br><br>
+            <a href="tel:+14048617921" style="text-decoration:none">
+            <img title="Phone" alt="Phone" src="img/phone.png" width="64" height="64"/>
+            <br>
+            +1 (404) 861-7921
+            </a> 
+            <br>
+         </h4>
+         <br>
+         <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+         <center><div style="overflow:hidden;height:300px;width:600px;" class="img-responsive margin" style="width:100%" >
+            <div id="gmap_canvas" style="height:300px;width:600px;">
+               <style>#gmap_canvas img{max-width:none!important;background:none!important}</style>
+            </div>
+         </div></center>
+         <script type="text/javascript"> 
+         function init_map() {
+            var myOptions = {zoom:15,center:new google.maps.LatLng(33.927961,-84.33315800000003),mapTypeId: google.maps.MapTypeId.ROADMAP};
+            map = new google.maps.Map(document.getElementById("gmap_canvas"), myOptions);
+            marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(33.927961, -84.33315800000003)});
+            infowindow = new google.maps.InfoWindow({content:"<b>Gautham Velappan</b><br/>2000 Asbury Sq, Apt: 3152<br/>Atlanta, GA 30346" });
+            google.maps.event.addListener(marker, "click", function(){infowindow.open(map,marker);});
+            infowindow.open(map,marker);}
+            google.maps.event.addDomListener(window, 'load', init_map);
+            </script>
       </div>
       <!-- Footer -->
       <footer class="container-fluid bg-where text-center">
