--- a/home.html
+++ b/home.html
@@ -25,6 +25,7 @@
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                <ul class="nav navbar-nav navbar-right">
+                  <li><a href="#about">ABOUT</a></li>
                   <li><a href="#who">WHO</a></li>
                   <li><a href="#what">WHAT</a></li>
                   <li><a href="#where">WHERE</a></li>
@@ -33,65 +34,129 @@
          </div>
       </nav>
       <!-- First Container -->
-      <div id="who" class="container-fluid bg-about text-center">
-         <h1 class="margin">Who Am I?</h1>
+      <div id="about" class="container-fluid bg-about text-center">
+         <h1 class="margin">ABOUT</h1>
          <img src="img/profile.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Gautham_Velappan_Profile" width="256" height="256">
          <h4 style="color: #323232;">
             Hi. I’m <b><i>Gautham Velappan Arumugavadivelmurugan</b></i>. I have what appears to be a very difficult name to pronounce. Most often I have pronunciation challenge with people and end up winning.
-            Anyways, having such a unique name is good for something - I can be easily found on the internet without much difficulty and when i comes to getting user names I can never have any trouble getting one.
+            <br>Anyway, having such a unique name is good for something - I can be easily found on the internet without much difficulty and when it comes to getting user names I can never have any trouble getting one.
             <br>
          </h4>
-         <h3>Actually about me</h3>
+         <h3>ACTUALLY ABOUT ME</h3>
          <h4 style="color: #323232;"> 
-            I'm front end Mobile applications and Web developer who is passionate about innovating and creating productive applications. As a developer I spend my time writing and testing code. 
-            When not developing I create various prototype, designs and ideas. I also spend time tutoring basics of iOS development, swift and objective-c.
+            I'm front end Mobile applications and Web developer who is passionate about innovating and creating productive applications. As a developer I spend my time writing and testing code.
+            <br>When not developing I create various prototype, designs and ideas. I also spend time tutoring basics of iOS development, swift and objective-c.
          </h4>
       </div>
       <!-- Second Container -->
-      <div id="what" class="container-fluid bg-who text-center">
-         <h1 class="margin">What I do?</h1>
+      <div id="who" class="container-fluid bg-who text-center">
+         <h1 class="margin">WHO AM I?</h1>
          <h4>
-            I am a US-based iOS, watchOS, and tvOS Developer and consultant with a wealth of experience with both big brands and small businesses. I have published a few my own apps, including Namma Chennai which was the best transit app under navigation section in India region. My recent client work has included the Citi Mobile NA, Logitech Harmony, JapanPost Health, and Logitech Broadcaster. I was also part of the team at IBM which build 100+ iOS enterprise apps for iOS devices. As well as iPhone, iPad, Apple Watch, and Apple TV development (all coded in Swift), I also work as a Ruby on rails developer specializing in API development for iOS apps 
+            I am an US-based iOS, watchOS, and tvOS Developer and consultant with a wealth of experience with both big brands and small businesses. I have published a few my own apps, including Namma Chennai which was the best transit app under navigation section in India region. 
+            <br>
+            My recent client work has included the Citi Mobile NA, Logitech Harmony, JapanPost Health, and Logitech Broadcaster. I was also part of the team at IBM which build 100+ iOS enterprise apps for iOS devices.
+            <br>
+            As well as iPhone, iPad, Apple Watch, and Apple TV development (all coded in Swift), I also work as a Ruby on rails developer specializing in API development for iOS apps. 
          </h4>
          <br>
          <h4>
-            I am also a casual photographer, I enjoy capturing landscape, cityscape and other random scenes. I don’t own any professional camera and I fancy my iPhone to do the magic. I started up an Instagram few years ago and I have decent number of  followers. Here are some of the images I captured.  
+            I currently work for IBM and I am part of IBM’s Interactive Experience team. Prior to joining IBM, I was a software engineer at Logitech Inc. developing iOS and OS X applications. I also developed applications for Cognizant Technology Solutions and few other startups. 
+            <br><br>
+            <h3><b>- Specialties -</b></h3>
+            <h4>
+               Design Patterns<br>
+               Code quality/review/Git<br>
+               iOS Application development<br>
+               User experience and User interface
+            </h4>
+            <h3><b>- Technical Skills Summary -</b></h3>
+            <h4>
+               MySQL, CouchDB;<br>
+               Xcode, Eclipse, Git;<br>
+               RESTful web services, Rails;<br>
+               Objective-C, Swift, JSON, C, HTML, SQL, Bash;<br>
+               Mac OS, OSX, Windows, Linux, iOS, watchOS, tvOS;
+            </h4>
+         </h4>
+         <br>
+         <h4>
+            I am also a casual photographer, I enjoy capturing landscape, cityscape and other random scenes. I don’t own any professional camera and I fancy my iPhone to do the magic. I started up an Instagram few years ago and I have decent number of  followers.  
+         </h4>
+      </div>
+      <!-- Third Container (Grid) -->
+      <div id="what" class="container-fluid bg-what text-center">
+         <h1 class="margin">WHAT HAVE I DONE?</h1>
+         <h4>
+            The apps here were all designed, created, and published by myself or the work I did for clients. All of my personal apps are published via my family account, Karthik Velappan.
+         </h4>
+         <br>
+         <iframe src="https://widgets.itunes.apple.com/widget.html?c=us&brc=FFFFFF&blc=FFFFFF&trc=FFFFFF&tlc=FFFFFF&d= &t=Personal Applications&m=software&e=software,iPadSoftware&w=250&h=325&ids=718101880&wt=playlist&partnerId=&affiliate_id=&at=&ct=" frameborder=0 style="overflow-x:hidden;overflow-y:hidden;width:250px;height: 325px;border:0px"></iframe>
+         <iframe src="https://widgets.itunes.apple.com/widget.html?c=us&brc=FFFFFF&blc=FFFFFF&trc=FFFFFF&tlc=FFFFFF&d=Citigroup and Logitech &t=Client Applications&m=software&e=software,iPadSoftware&w=250&h=325&ids=301724680,626853860,554319138&wt=playlist&partnerId=&affiliate_id=&at=&ct=" frameborder=0 style="overflow-x:hidden;overflow-y:hidden;width:250px;height: 325px;border:0px"></iframe>
+         <iframe src="https://widgets.itunes.apple.com/widget.html?c=us&brc=FFFFFF&blc=FFFFFF&trc=FFFFFF&tlc=FFFFFF&d=Lowe's and Damaka Inc &t=Client Applications&m=software&e=software,iPadSoftware&w=250&h=325&ids=457954781,467936942&wt=playlist&partnerId=&affiliate_id=&at=&ct=" frameborder=0 style="overflow-x:hidden;overflow-y:hidden;width:250px;height: 325px;border:0px"></iframe>
+         <br>
+         <br>
+         <h4>
+            I am fairly active on the tech community, you can find my contributions on these forums and git repos.
+         </h4>
+         <br>
+         <div class="row">
+            <div class="col-sm-4">
+               <a target="_blank" href="http://stackoverflow.com/users/4131355/gautham-velappan">
+               <img src="img/stackoverflow.png" class="img-responsive margin" style="width:100%"  alt="Stackoverflow"></a>
+            </div>
+            <div class="col-sm-4">
+               <a target="_blank" href="https://bitbucket.org/ivagautham/">
+               <img src="img/bitbucket.png" class="img-responsive margin" style="width:100%"  alt="Bitbucket"></a>
+            </div>
+            <div class="col-sm-4">
+               <a target="_blank" href="https://github.com/vagautham">
+               <img src="img/github.png" class="img-responsive margin" style="width:100%"  alt="Github"></a>
+            </div>
+         </div>
+         <h4>
+            Did I mention I am on Instagram? Here are some of my snaps.
          </h4>
          <br>
          <div class="row">
             <div class="col-sm-4">
                <h5>Beautiful fall afternoon at Central Park, NYC</h5>
-               <img src="img/instagram/centralpark.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+               <a target="_blank" href="https://www.instagram.com/p/uwtQGSsCEG/">
+               <img src="img/instagram/centralpark.jpg" class="img-responsive margin" style="width:100%" alt="Image"></a>
             </div>
             <div class="col-sm-4">
-               <h5>Birdseye view of Chennai, Tamil Nadu</h5>
-               <img src="img/instagram/chennai.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+               <h5>Bird's-eye view of Chennai, Tamil Nadu</h5>
+               <a target="_blank" href="https://www.instagram.com/p/-oVfAWMCB9/">
+               <img src="img/instagram/chennai.jpg" class="img-responsive margin" style="width:100%" alt="Image"></a>
             </div>
             <div class="col-sm-4">
                <h5>Stunning sunset at San Diego, CA</h5>
-               <img src="img/instagram/sandiego.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+               <a target="_blank" href="https://www.instagram.com/p/BExe56KsCHN/">
+               <img src="img/instagram/sandiego.jpg" class="img-responsive margin" style="width:100%" alt="Image"></a>
             </div>
          </div>
          <div class="row">
             <div class="col-sm-4">
                <h5>Gloomy hours in Manhattan, NY</h5>
-               <img src="img/instagram/nyc.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+               <a target="_blank" href="https://www.instagram.com/p/0Ef-JHMCHo/">
+               <img src="img/instagram/nyc.jpg" class="img-responsive margin" style="width:100%" alt="Image"></a>
             </div>
             <div class="col-sm-4">
                <h5>Sunny day at Piedmont Park, Atlanta</h5>
-               <img src="img/instagram/piedmontpark.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+               <a target="_blank" href="https://www.instagram.com/p/BIAmN0dDwc_/">
+               <img src="img/instagram/piedmontpark.jpg" class="img-responsive margin" style="width:100%" alt="Image"></a>
             </div>
             <div class="col-sm-4">
                <h5>Seashore at Baltimore, MD</h5>
-               <img src="img/instagram/maryland.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+               <a target="_blank" href="https://www.instagram.com/p/3U0HMbMCJk/">
+               <img src="img/instagram/maryland.jpg" class="img-responsive margin" style="width:100%" alt="Image"></a>
             </div>
          </div>
          </a>
       </div>
-      <!-- Third Container (Grid) -->
-      <div id="where" class="container-fluid bg-what text-center">
-         <h1 class="margin">Where To Find Me?</h1>
-         <h4 style="color: #323232;">
+      <!-- Forth Container (Grid) -->
+      <div id="where" class="container-fluid bg-where text-center">
+         <h1 class="margin">WHERE TO FIND ME?</h1>
+         <h4>
             Like most of the people around the world I am on all the popular social networking community.
             <br>
             Find me, Friend me and Follow me
@@ -112,8 +177,8 @@
             </a>
          </div>
          <br>
-         <h4 style="color: #323232;">
-            If you want to know my kind of music and test my skills in gaming.
+         <h4>
+            If you want to know my kind of music and test my gaming skills.
             <br>
             Add me on theses. Lets kill some zombies and bad guys together
          </h4>
@@ -127,7 +192,7 @@
             </a>
          </div>
          <br>
-         <h4 style="color: #323232;">
+         <h4>
             Say Hello.
             <br><br>
             <a href="mailto:ivagautham@gmail.com?Subject=Hello%20again" style="text-decoration:none">
@@ -145,24 +210,27 @@
          </h4>
          <br>
          <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
-         <center><div style="overflow:hidden;height:300px;width:600px;" class="img-responsive margin" style="width:100%" >
-            <div id="gmap_canvas" style="height:300px;width:600px;">
-               <style>#gmap_canvas img{max-width:none!important;background:none!important}</style>
+         <center>
+            <div style="overflow:hidden;height:300px;width:600px;" class="img-responsive margin" style="width:100%" >
+               <div id="gmap_canvas" style="height:300px;width:600px;">
+                  <style>#gmap_canvas img{max-width:none!important;background:none!important}</style>
+               </div>
             </div>
-         </div></center>
+         </center>
          <script type="text/javascript"> 
-         function init_map() {
-            var myOptions = {zoom:15,center:new google.maps.LatLng(33.927961,-84.33315800000003),mapTypeId: google.maps.MapTypeId.ROADMAP};
-            map = new google.maps.Map(document.getElementById("gmap_canvas"), myOptions);
-            marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(33.927961, -84.33315800000003)});
-            infowindow = new google.maps.InfoWindow({content:"<b>Gautham Velappan</b><br/>2000 Asbury Sq, Apt: 3152<br/>Atlanta, GA 30346" });
-            google.maps.event.addListener(marker, "click", function(){infowindow.open(map,marker);});
-            infowindow.open(map,marker);}
-            google.maps.event.addDomListener(window, 'load', init_map);
-            </script>
+            function init_map() {
+               var myOptions = {zoom:15,center:new google.maps.LatLng(33.927961,-84.33315800000003),mapTypeId: google.maps.MapTypeId.ROADMAP};
+               map = new google.maps.Map(document.getElementById("gmap_canvas"), myOptions);
+               marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(33.927961, -84.33315800000003)});
+               infowindow = new google.maps.InfoWindow({content:"<b>Gautham Velappan</b><br/>2000 Asbury Sq, Apt: 3152<br/>Atlanta, GA 30346" });
+               google.maps.event.addListener(marker, "click", function(){infowindow.open(map,marker);});
+               infowindow.open(map,marker);}
+               google.maps.event.addDomListener(window, 'load', init_map);
+               
+         </script>
       </div>
       <!-- Footer -->
-      <footer class="container-fluid bg-where text-center">
+      <footer class="container-fluid bg-footer text-center">
          <p>Copyright 2016 Gautham Velappan. Content thieves will be ... meh, I don't care :)</p>
       </footer>
    </body>
