--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
       <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
       <script charset="UTF-8" src="js/index.js"></script>
-      <link href="css/style.css" rel="stylesheet">
+      <link href="css/main.css" rel="stylesheet">
    </head>
    <body>
       <!-- Navbar -->
