remove unwanted files

--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
       <title>Gautham Velappan</title>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-      <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-      <link href="http://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+      <link rel="stylesheet" href="css/bootstrap.min.css">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-      <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+      <script src="js/bootstrap.min.js"></script>
       <script charset="UTF-8" src="js/index.js"></script>
       <link href="css/main.css" rel="stylesheet">
    </head>
@@ -62,14 +61,14 @@
          <h4>
             I currently work for IBM and I am part of IBM’s Interactive Experience team. Prior to joining IBM, I was a software engineer at Logitech Inc. developing iOS and OS X applications. I also developed applications for Cognizant Technology Solutions and few other startups. 
             <br><br>
-            <h3><b>- Specialties -</b></h3>
+            <h3><b> Specialties </b></h3>
             <h4>
                Design Patterns<br>
                Code quality/review/Git<br>
                iOS Application development<br>
                User experience and User interface
             </h4>
-            <h3><b>- Technical Skills Summary -</b></h3>
+            <h3><b> Technical Skills Summary </b></h3>
             <h4>
                MySQL, CouchDB;<br>
                Xcode, Eclipse, Git;<br>
